# actions_test

./: CMakeLists.txt  README.md  actions_config.sh
.github/workflows/: cmake.yml
include/: mylib.hpp
tests/: test.cpp
